Fixed add button not showing after reloading page

--- a/src/components/WidgetsField/NoteWidget/NoteWidgetCard/NoteWidgetCard.less
+++ b/src/components/WidgetsField/NoteWidget/NoteWidgetCard/NoteWidgetCard.less
@@ -4,7 +4,7 @@
   padding: 0 20px;
 
   transition: 0.75s;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.8);
   //backdrop-filter: blur(3px);
   border: none;
   border-radius: 25px;
